[package]
name = "memory_game"
version = "0.1.0"
authors = ["Andrew Radev <andrey.radev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { git = "https://github.com/ggez/ggez", rev = "3183367f397aa46fade5912fe23b53ca68b55bb4" }
rand = "0.8.0"
